cluster/apps/default/mealie/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mealie
  namespace: default
spec:
  ports:
    - port: 9000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: mealie
